--- a/cadastro.html
+++ b/cadastro.html
@@ -4,72 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro – ONG Pata Branca</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
+<header class="bg-primaria text-branco p-16">
     <h1>ONG Pata Branca</h1>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="text-branco">☰</label>
     <nav>
         <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="projeto.html">Projetos</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
+            <li><a href="index.html" class="text-branco">Início</a></li>
+            <li><a href="projeto.html" class="text-branco">Projetos</a></li>
+            <li><a href="cadastro.html" class="text-branco">Cadastro</a></li>
         </ul>
     </nav>
 </header>
 
-<main>
+<main class="container mt-16">
     <h2>Cadastro de Apoiador</h2>
 
     <form action="#" method="post">
-        <fieldset>
-            <legend>Dados Pessoais</legend>
+        <div class="form-group">
+            <label for="nome">Nome Completo *</label>
+            <input type="text" id="nome" name="nome" required>
+        </div>
 
-            <label for="nome">Nome Completo *</label><br>
-            <input type="text" id="nome" name="nome" required><br><br>
+        <div class="form-group">
+            <label for="email">E-mail *</label>
+            <input type="email" id="email" name="email" required>
+        </div>
 
-            <label for="email">E-mail *</label><br>
-            <input type="email" id="email" name="email" required><br><br>
-
-            <label for="cpf">CPF *</label><br>
+        <div class="form-group">
+            <label for="cpf">CPF *</label>
             <input type="text" id="cpf" name="cpf"
                    pattern="\d{3}\.\d{3}\.\d{3}-\d{2}"
-                   placeholder="000.000.000-00" required><br><br>
+                   placeholder="000.000.000-00" required>
+        </div>
 
-            <label for="telefone">Telefone *</label><br>
+        <div class="form-group">
+            <label for="telefone">Telefone *</label>
             <input type="tel" id="telefone" name="telefone"
                    pattern="\(\d{2}\)\s\d{4,5}-\d{4}"
-                   placeholder="(00) 00000-0000" required><br><br>
+                   placeholder="(00) 00000-0000" required>
+        </div>
 
-            <label for="nascimento">Data de Nascimento *</label><br>
+        <div class="form-group">
+            <label for="nascimento">Data de Nascimento *</label>
             <input type="date" id="nascimento" name="nascimento" required>
-        </fieldset>
+        </div>
 
-        <fieldset>
-            <legend>Endereço</legend>
+        <div class="form-group">
+            <label for="endereco">Endereço *</label>
+            <input type="text" id="endereco" name="endereco" required>
+        </div>
 
-            <label for="endereco">Logradouro *</label><br>
-            <input type="text" id="endereco" name="endereco" required><br><br>
-
-            <label for="cep">CEP *</label><br>
+        <div class="form-group">
+            <label for="cep">CEP *</label>
             <input type="text" id="cep" name="cep"
-                   pattern="\d{5}-\d{3}" placeholder="00000-000" required><br><br>
+                   pattern="\d{5}-\d{3}" placeholder="00000-000" required>
+        </div>
 
-            <label for="cidade">Cidade *</label><br>
-            <input type="text" id="cidade" name="cidade" required><br><br>
+        <div class="form-group">
+            <label for="cidade">Cidade *</label>
+            <input type="text" id="cidade" name="cidade" required>
+        </div>
 
-            <label for="estado">Estado (UF) *</label><br>
+        <div class="form-group">
+            <label for="estado">Estado (UF) *</label>
             <input type="text" id="estado" name="estado"
                    maxlength="2" pattern="[A-Z]{2}" placeholder="SP" required>
-        </fieldset>
+        </div>
 
-        <button type="submit">Enviar Cadastro</button>
+        <button type="submit" class="btn btn-primaria">Enviar Cadastro</button>
     </form>
 </main>
 
-<footer>
+<footer class="bg-neutra-200 mt-32 p-16 t-xs text-cinza">
     <p>&copy; 2025 ONG Pata Branca</p>
 </footer>
-
 </body>
 </html>
