feat: js foi adicionado. Validacao na ágina do formulário agora foi feita.

--- a/index.html
+++ b/index.html
@@ -1,67 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONG Pata Branca – Início</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ONG Pata Branca</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="bg-primaria text-branco p-16">
+  <header class="bg-primaria text-branco p-16">
     <h1>ONG Pata Branca</h1>
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="text-branco">☰</label>
     <nav>
-        <ul>
-            <li><a href="index.html" class="text-branco">Início</a></li>
-            <li><a href="projeto.html" class="text-branco">Projetos</a></li>
-            <li><a href="cadastro.html" class="text-branco">Cadastro</a></li>
-        </ul>
+      <ul>
+        <li><a href="#home" class="text-branco">Início</a></li>
+        <li><a href="#projetos" class="text-branco">Projetos</a></li>
+        <li><a href="#cadastro" class="text-branco">Cadastro</a></li>
+      </ul>
     </nav>
-</header>
+  </header>
 
-<main class="container mt-16">
-    <section class="col-12">
-        <h2>Quem somos</h2>
-        <figure>
-            <img src="imagens/cat.jpeg" alt="Gato filhote listrado de olhos verdes, cor escura marrom">
-            <figcaption>Gato resgatado pela ONG</figcaption>
-        </figure>
-        <p>Somos uma organização sem fins lucrativos especializada no cuidado de gatos de rua.</p>
-    </section>
+  <main class="container mt-16"></main>
 
-    <hr class="mt-16">
-
-    <section>
-        <h2>Missão da Pata Branca</h2>
-        <blockquote>
-            Promover dignidade e oportunidade de uma nova vida a gatos abandonados, mostrando o lado bom da vida ao adotar um gato.
-        </blockquote>
-    </section>
-
-    <hr class="mt-16">
-
-    <section>
-        <h2>Contato</h2>
-        <table class="text-cinza">
-            <tr>
-                <th>Endereço:</th>
-                <td>Rua Garra Afiada, 289 – São Paulo/SP</td>
-            </tr>
-            <tr>
-                <th>Telefone:</th>
-                <td>(11) 92322-4324</td>
-            </tr>
-            <tr>
-                <th>E-mail:</th>
-                <td>contato@patabranca.com.br</td>
-            </tr>
-        </table>
-    </section>
-</main>
-
-<footer class="bg-neutra-200 mt-32 p-16 t-xs text-cinza">
+  <footer class="bg-neutra-200 mt-32 p-16 t-xs text-cinza">
     <p>&copy; 2025 ONG Pata Branca</p>
-</footer>
+  </footer>
+
+  <!-- SÓ este script -->
+  <script type="module" src="js/router.js"></script>
 </body>
 </html>
